Started css for header component and main page

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kantumruy+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Titan+One&display=swap');
+
 :root {
-  --main-bg: #f1eee9;
-  --light-purple: #b3a0ce;
-  --litght-green: #d1ef53;
-  --dark-orange: #fd5e0a;
+  --main-bg: #f1ebdf;
+  --dark-green: #283618;
+  --regular-green: #606c38;
+  --dark-yellow: #dda15e;
+  --darker-yellow: #bc6c25;
+  --darker-brown: #2b1109;
+  --regular-red: #ff3300;
+  --active-btn: #e7dbc1;
 }
 
 body {
