--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -1,51 +1,62 @@
 .btn-menu {
   background-color: var(--main-bg);
   color: var(--darker-brown);
-  padding: 0.5rem 1.2rem;
+
   display: flex;
   justify-content: center;
+
   position: relative;
+
+  padding: 0.5rem 1.2rem;
+
   border: none;
 }
 
 .btn-menu:active {
   background-color: var(--active-btn);
-  border-radius: 20%;
 }
 
 .menu-icon {
+  color: var(--darker-brown);
+
   font-size: 1.8rem;
 }
 
 .items-menu {
-  position: absolute;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 
   right: 1.5rem;
+  position: absolute;
+
+  padding: 1rem;
   width: 30%;
 
   border: solid var(--darker-brown) 2px;
+  box-shadow: -1px 8px 10px rgba(0, 0, 0, 0.57);
   border-radius: 5px;
-
-  padding: 1rem;
 }
 
 .items-menu a {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-decoration: none;
-  color: var(--darker-brown);
 
   font-family: 'Kantumruy Pro', sans-serif;
   font-weight: 500;
+  color: var(--darker-brown);
+  text-decoration: none;
+}
+
+.items-menu a:active {
+  text-decoration: underline;
 }
 
 .home-icon,
 .recipe-icon,
 .search-icon {
   font-size: 0.9rem;
+
   margin-right: 0.3rem;
 }
