new component tabs, header adjusted for desktop

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -6,7 +6,8 @@
   --regular-green: #606c38;
   --dark-yellow: #dda15e;
   --darker-yellow: #bc6c25;
-  --darker-brown: #2b1109;
+  --light-brown: #7c5041;
+  --darker-brown: #3d190e;
   --regular-red: #ff3300;
   --active-btn: #e7dbc1;
 }
