--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -3,7 +3,7 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 4rem;
-  padding: 0.8rem 1.5rem;
+  padding: 0.8rem 6rem;
 }
 
 .title {
@@ -23,4 +23,20 @@ header {
   font-stretch: normal;
   font-size: 2.6rem;
   color: var(--darker-brown);
+}
+
+@media (min-width: 1100px) {
+  .tab-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .title-icon {
+    font-size: 2.5rem;
+  }
+
+  .main-title {
+    font-size: 3.4rem;
+  }
 }
