Main page done for now, both mobile and desktop

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -3,7 +3,8 @@
 :root {
   --main-bg: #f1ebdf;
   --dark-green: #283618;
-  --regular-green: #606c38;
+  --regular-green: #778351;
+  --light-green: #9bac63;
   --dark-yellow: #dda15e;
   --darker-yellow: #bc6c25;
   --light-brown: #7c5041;
