--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -3,7 +3,11 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 4rem;
-  padding: 0.8rem 6rem;
+  padding: 0.8rem 1.5rem;
+}
+
+.home-link {
+  text-decoration: none;
 }
 
 .title {
@@ -26,6 +30,10 @@ header {
 }
 
 @media (min-width: 1100px) {
+  header {
+    padding: 1.5rem 6rem 0;
+  }
+
   .tab-group {
     display: flex;
     justify-content: space-between;
@@ -33,10 +41,10 @@ header {
   }
 
   .title-icon {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   .main-title {
-    font-size: 3.4rem;
+    font-size: 3rem;
   }
 }
