--- a/src/pages/main/styles.scss
+++ b/src/pages/main/styles.scss
@@ -1,3 +1,4 @@
+.side-content,
 .main-content {
   display: flex;
   justify-content: center;
@@ -27,11 +28,15 @@
   padding: 0 2rem;
 }
 
-.main-content img {
+.desktop-btn {
+  display: none;
+}
+
+.side-content img {
   margin-top: -3rem;
 }
 
-.main-content .primary-btn {
+.mobile-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,4 +56,150 @@
   height: 3.5rem;
 
   margin-top: 1rem;
+}
+
+@media (min-width: 1100px) {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-content {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 60%;
+    padding-left: 10%;
+    z-index: 10;
+  }
+
+  .main-content h1 {
+    font-size: 5rem;
+    padding: 0 auto;
+  }
+
+  .main-content p {
+    font-size: 1.3rem;
+    font-weight: 300;
+    margin-top: 1.5rem;
+    width: 90%;
+  }
+
+  .desktop-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--regular-green);
+
+    font-family: 'Kantumruy Pro', sans-serif;
+    font-weight: 400;
+    font-size: 1.4rem;
+    color: var(--main-bg);
+    text-decoration: none;
+
+    border: none;
+    border-radius: 5px;
+
+    width: 45%;
+    height: 4rem;
+
+    margin-top: 1rem;
+    margin-left: 2rem;
+
+    transition: 0.2s;
+  }
+
+  .desktop-btn:hover {
+    background-color: var(--light-green);
+  }
+
+  .side-content {
+    width: 40%;
+  }
+
+  .side-content img {
+    margin-top: 0;
+    height: 630px;
+    width: 630px;
+    padding-right: 50%;
+  }
+
+  .mobile-btn {
+    display: none;
+  }
+}
+
+@media (min-width: 1850px) {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-content {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 10%;
+    z-index: 10;
+  }
+
+  .main-content h1 {
+    font-size: 5rem;
+    padding: 0 auto;
+  }
+
+  .main-content p {
+    font-size: 1.3rem;
+    font-weight: 300;
+    margin-top: 1.5rem;
+    width: 90%;
+  }
+
+  .desktop-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--regular-green);
+
+    font-family: 'Kantumruy Pro', sans-serif;
+    font-weight: 400;
+    font-size: 1.4rem;
+    color: var(--main-bg);
+    text-decoration: none;
+
+    border: none;
+    border-radius: 5px;
+
+    width: 45%;
+    height: 4rem;
+
+    margin-top: 1rem;
+    margin-left: 2rem;
+
+    transition: 0.2s;
+  }
+
+  .desktop-btn:hover {
+    background-color: var(--light-green);
+  }
+
+  .main-content {
+    width: 65%;
+  }
+  .side-content {
+    width: 35%;
+  }
+
+  .side-content img {
+    margin-top: 0;
+    height: 800px;
+    width: 900px;
+    padding-right: 80%;
+  }
+
+  .mobile-btn {
+    display: none;
+  }
 }
