--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -23,10 +23,10 @@ header {
 }
 
 .main-title {
-  font-family: 'Bebas Neue', cursive;
+  font-family: var(--terciary-font);
   font-stretch: normal;
   font-size: 2.6rem;
-  color: var(--darker-brown);
+  color: var(--darker-green);
 }
 
 @media (min-width: 1100px) {
