--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -45,7 +45,7 @@
   justify-content: center;
   align-items: center;
 
-  font-family: 'Kantumruy Pro', sans-serif;
+  font-family: var(--primary-font);
   font-weight: 500;
   color: var(--darker-brown);
   text-decoration: none;
