--- a/src/pages/main/styles.scss
+++ b/src/pages/main/styles.scss
@@ -1,3 +1,7 @@
+.main-container {
+  box-shadow: inset 1px 2px 8px rgba(0, 0, 0, 0.11);
+}
+
 .side-content,
 .main-content {
   display: flex;
@@ -8,7 +12,8 @@
 }
 
 .main-content h1 {
-  font-family: 'Fugaz One', cursive;
+  font-family: var(--secondary-font);
+  color: var(--darker-green);
   font-size: 2.3rem;
   margin-top: 1rem;
   margin-bottom: -2rem;
@@ -17,7 +22,7 @@
 }
 
 .main-content p {
-  font-family: 'Kantumruy Pro', sans-serif;
+  font-family: var(--primary-font);
   font-size: 1.1rem;
   font-weight: 300;
   display: flex;
@@ -41,9 +46,9 @@
   justify-content: center;
   align-items: center;
 
-  background-color: var(--regular-green);
+  background-color: var(--dark-green);
 
-  font-family: 'Kantumruy Pro', sans-serif;
+  font-family: var(--primary-font);
   font-weight: 500;
   font-size: 1.4rem;
   color: var(--main-bg);
@@ -58,8 +63,13 @@
   margin-top: 1rem;
 }
 
+.mobile-btn:active,
+.mobile-btn:focus {
+  background-color: var(--regular-green);
+}
+
 @media (min-width: 1100px) {
-  .container {
+  .main-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,9 +100,9 @@
     justify-content: center;
     align-items: center;
 
-    background-color: var(--regular-green);
+    background-color: var(--dark-green);
 
-    font-family: 'Kantumruy Pro', sans-serif;
+    font-family: var(--primary-font);
     font-weight: 400;
     font-size: 1.4rem;
     color: var(--main-bg);
@@ -111,7 +121,7 @@
   }
 
   .desktop-btn:hover {
-    background-color: var(--light-green);
+    background-color: var(--regular-green);
   }
 
   .side-content {
@@ -131,7 +141,7 @@
 }
 
 @media (min-width: 1850px) {
-  .container {
+  .main-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -161,9 +171,9 @@
     justify-content: center;
     align-items: center;
 
-    background-color: var(--regular-green);
+    background-color: var(--dark-green);
 
-    font-family: 'Kantumruy Pro', sans-serif;
+    font-family: var(--primary-font);
     font-weight: 400;
     font-size: 1.4rem;
     color: var(--main-bg);
@@ -182,7 +192,7 @@
   }
 
   .desktop-btn:hover {
-    background-color: var(--light-green);
+    background-color: var(--regular-green);
   }
 
   .main-content {
