--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -1,3 +1,14 @@
+.table-box {
+  padding: 0 2rem 0;
+}
+
+.table-container {
+  border-radius: 10px;
+  box-shadow: inset 0 2px 20px 0 rgba(0, 0, 0, 0.2);
+
+  background-color: var(--main-bg);
+}
+
 .table-container,
 .table-header {
   display: flex;
