--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -8,7 +8,7 @@
   padding: 0 0 1rem 0;
   margin-top: 1rem;
   border-radius: 10px;
-  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
   background-color: var(--main-bg);
 }
@@ -30,10 +30,10 @@
 }
 
 .card-title {
-  font-family: var(--primary-font);
+  font-family: var(--terciary-font);
   font-weight: 600;
   font-stretch: normal;
-  font-size: 1.15rem;
+  font-size: 1.5rem;
   color: var(--dark-green);
   text-decoration: none;
   border-bottom: 1px solid var(--dark-green);
@@ -46,7 +46,7 @@
   padding: 0.35rem 0 0.35rem 0;
   font-family: var(--primary-font);
   font-weight: 400;
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: var(--dark-green);
   text-decoration: none;
 }
