--- a/src/pages/main/styles.scss
+++ b/src/pages/main/styles.scss
@@ -21,7 +21,7 @@
   z-index: 0;
 }
 
-.main-content p {
+.main-content h2 {
   font-family: var(--primary-font);
   font-size: 1.1rem;
   font-weight: 300;
@@ -88,7 +88,7 @@
     padding: 0 auto;
   }
 
-  .main-content p {
+  .main-content h2 {
     font-size: 1.3rem;
     font-weight: 300;
     margin-top: 1.5rem;
@@ -159,7 +159,7 @@
     padding: 0 auto;
   }
 
-  .main-content p {
+  .main-content h2 {
     font-size: 1.3rem;
     font-weight: 300;
     margin-top: 1.5rem;
