--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -3,14 +3,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   flex-direction: column;
   padding: 0 0 1rem 0;
   margin-top: 1rem;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
   background-color: var(--main-bg);
+  transition: 0.2s;
 }
 
 .card img {
@@ -49,4 +48,33 @@
   font-size: 1rem;
   color: var(--dark-green);
   text-decoration: none;
+}
+
+@media (min-width: 1100px) {
+  .card {
+    width: 30%;
+  }
+
+  .card img {
+    height: 250px;
+  }
+}
+@media (min-width: 1850px) {
+  .card {
+    width: 30%;
+  }
+
+  .card img {
+    height: 350px;
+  }
+
+  .card:hover {
+    transform: translate(-1px, -2px);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+
+  .card-title:hover,
+  .card-link:hover {
+    color: var(--regular-green);
+  }
 }
