--- a/src/components/Dropdown/styles.scss
+++ b/src/components/Dropdown/styles.scss
@@ -32,7 +32,7 @@
   right: 1.5rem;
   position: absolute;
 
-  padding: 1.5rem;
+  padding: 2rem 3.5rem;
   width: 30%;
 
   background-color: var(--main-bg);
