--- a/src/components/Form/styles.scss
+++ b/src/components/Form/styles.scss
@@ -6,3 +6,41 @@
   width: 100%;
   box-shadow: inset 1px 2px 8px rgba(0, 0, 0, 0.11);
 }
+
+.form-content {
+  width: 100%;
+}
+
+@media (min-width: 1100px) {
+  .results-content,
+  .form-content {
+    width: 60%;
+  }
+
+  .section-recipe {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    gap: 1rem;
+  }
+}
+
+@media (min-width: 1850px) {
+  .form-content {
+    width: 60%;
+  }
+
+  .section-recipe {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .results-content {
+    display: flex;
+    width: 65%;
+  }
+}
