--- a/src/pages/Search/styles.scss
+++ b/src/pages/Search/styles.scss
@@ -3,8 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 1rem 3rem 0;
-  box-shadow: inset 1px 2px 8px rgba(0, 0, 0, 0.11);
+  padding: 1rem 3rem 2rem;
   background-color: var(--main-bg);
 }
 
@@ -30,8 +29,4 @@
 }
 .search-icon {
   padding: 0.5rem;
-}
-
-.section-recipe {
-  width: 100%;
 }
