--- a/src/pages/main/styles.scss
+++ b/src/pages/main/styles.scss
@@ -1,7 +1,3 @@
-.main-container {
-  box-shadow: inset 1px 2px 8px rgba(0, 0, 0, 0.11);
-}
-
 .side-content,
 .main-content {
   display: flex;
@@ -28,9 +24,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   margin-top: 2rem;
-  padding: 0 2rem;
+  padding: 0 2rem 2rem;
 }
 
 .desktop-btn {
@@ -61,6 +56,8 @@
   height: 3.5rem;
 
   margin-top: 1rem;
+
+  box-shadow: -1px 8px 10px rgb(0 0 0 / 57%);
 }
 
 .mobile-btn:active,
@@ -118,6 +115,7 @@
     margin-left: 2rem;
 
     transition: 0.2s;
+    box-shadow: 8px 10px rgb(0 0 0 / 57%);
   }
 
   .desktop-btn:hover {
@@ -163,7 +161,11 @@
     font-size: 1.3rem;
     font-weight: 300;
     margin-top: 1.5rem;
-    width: 90%;
+  }
+
+  .main-content h1,
+  .main-content h2 {
+    width: 80%;
   }
 
   .desktop-btn {
@@ -189,6 +191,8 @@
     margin-left: 2rem;
 
     transition: 0.2s;
+
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
 
   .desktop-btn:hover {
