--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -1,17 +1,3 @@
-.table-container {
-  background-color: var(--main-bg);
-  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
-}
-
-.table-box {
-  padding: 1em 2rem 2rem;
-}
-
-.table-container {
-  border-radius: 10px;
-  width: 100%;
-}
-
 .table-container,
 .table-header,
 .table-header h1,
@@ -21,12 +7,20 @@
   justify-content: center;
 }
 
+.table-box {
+  padding: 1em 2rem 2rem;
+}
+
 .table-container,
 .table-header {
   flex-direction: column;
 }
 
 .table-container {
+  background-color: var(--main-bg);
+  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+  border-radius: 10px;
+  width: 100%;
   padding: 1rem 1rem 0;
 }
 
@@ -37,6 +31,7 @@
   font-stretch: normal;
   width: 100%;
 }
+
 .table-header h1,
 .table-container h2 {
   border-bottom: 1px solid var(--dark-green);
@@ -59,6 +54,7 @@
 }
 
 .table-header img {
+  height: 200px;
   box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
 }
 
@@ -70,6 +66,60 @@
   font-size: 1.1rem;
   color: var(--dark-green);
   margin: 0.5rem 0 0 0;
+}
+
+.detailed-info {
+  height: 100%;
+  flex-wrap: wrap;
+}
+
+.detailed-info ul {
+  width: 100%;
+  list-style-type: none;
+}
+
+.prep-list,
+.diet-list {
+  display: flex;
+  margin-left: 0;
+  padding: 0;
+  justify-content: flex-start !important;
+  flex-direction: row !important;
+  width: 100%;
+}
+
+.prep-list li,
+.diet-list li {
+  padding: 1rem 0;
+  font-family: var(--primary-font);
+  color: var(--dark-green);
+  font-weight: 500;
+  font-size: 1rem;
+  padding: 0.5rem 0;
+}
+
+.diet-list li,
+.prep-list li {
+  width: 50%;
+  padding: 1rem 0;
+}
+
+.prep-list {
+  border-bottom: 1px solid var(--dark-green);
+}
+
+.diet-list {
+  display: flex;
+  margin-top: 0;
+  align-items: center;
+}
+
+.diet-list li {
+  width: 100%;
+}
+.clock-icon,
+.utensils-icon {
+  margin-right: 0.5rem;
 }
 
 .table-body .ingredients-list {
@@ -84,11 +134,92 @@
   padding: 0.5rem 0;
 }
 
-@media (min-width: 1850px) {
+@media (min-width: 1100px) {
   .table-box {
-    padding: 1em 4rem 2rem;
+    display: flex;
+    justify-content: center;
   }
 
+  .table-container {
+    max-width: 1000px;
+  }
+  .recipe-info,
+  .container-info ul,
+  .detailed-info ul {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .table-header img {
+    height: 350px;
+  }
+
+  .container-info {
+    flex-direction: column;
+    width: 45%;
+  }
+
+  .container-info ul {
+    justify-content: center;
+    width: 50%;
+  }
+
+  .detailed-info {
+    height: 100%;
+    flex-wrap: wrap;
+  }
+
+  .detailed-info ul {
+    width: 95%;
+    align-items: flex-start;
+    list-style-type: none;
+  }
+
+  .prep-list,
+  .diet-list {
+    justify-content: flex-start !important;
+    flex-direction: row !important;
+    width: 100%;
+  }
+
+  .prep-list li,
+  .diet-list li {
+    padding: 1rem 0;
+    font-family: var(--primary-font);
+    color: var(--dark-green);
+    font-weight: 500;
+    font-size: 1rem;
+    padding: 0.5rem 0;
+  }
+
+  .diet-list li,
+  .prep-list li {
+    width: 50%;
+    padding: 1rem 0;
+  }
+
+  .prep-list {
+    border-bottom: 1px solid var(--dark-green);
+  }
+
+  .diet-list {
+    display: flex;
+    margin-top: 0;
+    align-items: center;
+  }
+
+  .diet-list li {
+    width: 100%;
+  }
+  .clock-icon,
+  .utensils-icon {
+    margin-right: 0.5rem;
+  }
+}
+
+@media (min-width: 1850px) {
+  .table-box,
   .table-container,
   .table-header h1,
   .table-body,
@@ -100,12 +231,16 @@
     display: flex;
   }
 
+  .table-box {
+    padding: 1em 4rem 2rem;
+    justify-content: center;
+  }
+
   .table-container {
     align-items: center;
     flex-direction: column;
-  }
-  .table-container {
     padding: 1rem 3rem 2rem;
+    max-width: 1200px;
   }
 
   .table-header {
@@ -156,21 +291,6 @@
     flex-direction: row !important;
     width: 100%;
   }
-  .prep-list li,
-  .diet-list li {
-    padding: 1rem 0;
-    font-family: var(--primary-font);
-    color: var(--dark-green);
-    font-weight: 500;
-    font-size: 1rem;
-    padding: 0.5rem 0;
-  }
-
-  .diet-list li,
-  .prep-list li {
-    width: 50%;
-    padding: 1rem 0;
-  }
 
   .prep-list {
     border-bottom: 1px solid var(--dark-green);
@@ -181,9 +301,22 @@
     align-items: center;
   }
 
+  .prep-list li,
+  .diet-list li {
+    padding: 1rem 0;
+    font-family: var(--primary-font);
+    color: var(--dark-green);
+    font-weight: 500;
+    font-size: 1rem;
+    padding: 0.5rem 0;
+    width: 50%;
+    padding: 1rem 0;
+  }
+
   .diet-list li {
     width: 100%;
   }
+
   .clock-icon,
   .utensils-icon {
     margin-right: 0.5rem;
