css improvement for desktop-btn and tabs

--- a/src/pages/main/styles.scss
+++ b/src/pages/main/styles.scss
@@ -115,7 +115,7 @@
     margin-left: 2rem;
 
     transition: 0.2s;
-    box-shadow: 8px 10px rgb(0 0 0 / 57%);
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
   }
 
   .desktop-btn:hover {
