main-title className fixed, main-container padding fixed

--- a/src/pages/main/styles.scss
+++ b/src/pages/main/styles.scss
@@ -70,6 +70,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 0 2rem;
+    max-height: 75vh;
   }
 
   .main-content {
