--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -26,7 +26,7 @@ header {
   font-size: 1.5rem;
 }
 
-.title .teste {
+.title .main-title {
   font-family: var(--terciary-font);
   font-stretch: normal;
   font-size: 2.6rem;
