--- a/src/pages/main/styles.scss
+++ b/src/pages/main/styles.scss
@@ -1,3 +1,7 @@
+.main-container {
+  padding: 0 0 2rem;
+}
+
 .side-content,
 .main-content {
   display: flex;
@@ -71,7 +75,6 @@
     justify-content: center;
     align-items: center;
     padding: 0 0 2rem;
-    max-height: 75vh;
   }
 
   .main-content {
@@ -113,7 +116,6 @@
     width: 45%;
     height: 4rem;
 
-    margin-top: 1rem;
     margin-left: 2rem;
 
     transition: 0.2s;
